--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(5, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+    border-radius: 100px;
 }
 
 .calculator-grid > button {
@@ -32,7 +33,11 @@ body {
 }
 
 .span-two {
-    grid-column: span 2;
+    grid-column: span 1;
+}
+
+.operation {
+    background-color: rgba(123,123,123, 0.75);
 }
 
 .output {
@@ -55,4 +60,8 @@ body {
 .output .current-operand {
     color: white;
     font-size: 2.5rem;
+}
+
+.operation {
+    background-color: rgba(155, 155, 155, .75);
 }
