--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: linear-gradient(to right, #EE75F6FF, #5DDCF8FF);
+    background: linear-gradient(to right, rgba(198, 0, 198, 0.65), #316974);
 }
 
 .calculator-grid {
@@ -25,7 +25,7 @@ body {
     font-size: 2rem;
     border: 1px solid rgba(83, 83, 83, 0);
     outline: none;
-    background-color: rgba(92, 92, 92, 0.25);
+    background-color: rgba(92, 92, 92, .1);
 }
 
 .calculator-grid > button:hover {
